--- a/src/lab/exp5/SRIP/Codes/styles.css
+++ b/src/lab/exp5/SRIP/Codes/styles.css
@@ -524,7 +524,8 @@ svg1
   position: relative;
   bottom: -2rem;
   left: 50%;
-  margin-left:-20px;
+  margin-left:10px;
+  margin-top: -40px;
   width: 40px;
   height: 40px;
 
@@ -535,6 +536,7 @@ svg1
   background-size: contain;
   animation: bounce 1s infinite;
   display: none;
+
 }
 
 /*.bounce {
