--- a/src/lab/exp5/SRIP/Codes/styles.css
+++ b/src/lab/exp5/SRIP/Codes/styles.css
@@ -71,13 +71,13 @@ left:765px;
 .button2 {
   	display: inline-block;
   	padding: 15px 25px;
-  	font-size: 22px;
+  	font-size: 20px;
   	cursor: pointer;
   	text-align: center;
   	background-image:linear-gradient(to right,#677BD7,#7DE6E5);
   	border: none;
-  	border-radius: 15px;
-  	box-shadow: 0 9px #999;
+  	border-radius: 10px;
+  	box-shadow: 0 2px #999;
 	margin-left:460px;
 	display: inline-block;
         }
@@ -85,26 +85,7 @@ left:765px;
 
 .button2:active {
   	background-color: #3e8e41;
-  	box-shadow: 0 5px #000;
-  	transform: translateY(4px);
-	}.button3 {
-  	display: inline-block;
-  	padding: 15px 25px;
-  	font-size: 22px;
-  	cursor: pointer;
-  	text-align: center;
-  	background-image:linear-gradient(to right,#677BD7,#7DE6E5);
-  	border: none;
-  	border-radius: 15px;
-  	box-shadow: 0 9px #999;
-	margin-left:460px;
-    display: inline-block;
-}
-
-
-.button3:active {
-  	background-color: #3e8e41;
-  	box-shadow: 0 5px #000;
+  	box-shadow: 0 3px #000;
   	transform: translateY(4px);
 	}
 .tube {
@@ -222,6 +203,7 @@ left:765px;
   outline:none;
   border-radius: 20px;
   border-color:	#006400;
+  display: inline-block;
 
 }
 
@@ -324,6 +306,7 @@ left:765px;
   text-align: center;
   text-indent: center;
   margin-left:225px; 
+
 }
 #myContainer {
   width: 100px;
@@ -501,17 +484,17 @@ border:2px;
 
 
 
-svg1
+#svg1
 {
-  margin-left: 150px;
+  margin-left:1050px;
 }
 .arrow
 {
   position: relative;
   bottom: -2rem;
-  left: 50%;
-  margin-left:10px;
-  margin-top: -40px;
+  left: 49.5%;
+  margin-left:8px;
+  margin-top: -120px;
   width: 40px;
   height: 40px;
   
@@ -522,7 +505,7 @@ svg1
   background-size: contain;
  
   -webkit-animation: bounce 1s infinite;
-  /*-webkit-animation-play-state: paused;*/
+  
   
 
 }
@@ -549,7 +532,7 @@ svg1
   display:inline-flex;
   justify-content: center;
   align-items: center;
-  z-index: 5;
+  z-index: 10;
   margin-top:5px;
 
 }
@@ -570,7 +553,7 @@ svg1
   -webkit-animation: slide 3s linear infinite; 
           animation: slide 3s linear infinite;
   display:inline-block;
-  /*-webkit-animation-play-state: paused;*/
+  
 }
 
 .delay1 {
